<resources>
    <string name="app_name">ExpenceAppMVVM</string>
    <string name="email">Email</string>
    <string name="let_us_know_more_about_you">Let us know more about you</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="have_already_an_account">Have already an account?</string>
    <string name="error_username">Username is not valid</string>
    <string name="error_email">Email is not valid</string>
    <string name="error_password">Password is not valid</string>
    <string name="spend_with_brain">Spend with brain</string>
    <string name="app_icon">App icon</string>
    <string name="enter_credentials">Enter your credentials to become active again</string>
    <string name="email_hint">Your email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="no_account">Have no account?</string>
    <string name="register">Register</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="main_page">Main Page</string>
    <string name="converter">Converter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_budget">My Budget</string>
    <string name="expenses">Expenses</string>
    <string name="my_expense">My Expenses</string>
    <string name="log_out">Logout</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="amount_hint">Amount spent </string>
    <string name="category">Category</string>
    <string name="more_info">More information</string>
    <string name="invalid_date_error">Invalid date</string>
    <string name="invalid_amount_error">Invalid amount</string>
    <string name="permissions_required">Permissions needed to be dranted !</string>
    <string name="budget_information">Budget information</string>
    <string name="details">Details</string>
    <string name="current_balance">Current Balance</string>
    <string name="today_expenses">Today Expenses</string>
    <string name="week_expenses">This week expenses</string>
    <string name="month_expenses">This month expenses</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
