<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="loginViewModel"
            type="com.example.expenceappmvvm.screens.login.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/login_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.177" />

        <TextView
            android:id="@+id/login_header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/enter_credentials"
            android:textColor="#000000"
            android:textSize="@dimen/space_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/login_image"
            app:layout_constraintRight_toRightOf="@+id/login_image"
            app:layout_constraintTop_toBottomOf="@+id/login_image"
            app:layout_constraintVertical_bias="0.05" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="#FFFFFF"
            android:hint="@string/email_hint"
            android:paddingBottom="14dp"
            android:theme="@style/AppTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_header_text"
            app:layout_constraintVertical_bias="0.05">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:maxLines="1"
                android:inputType="text"
                android:text="@{loginViewModel.user.email}"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:textColor="#000000"
                android:textColorHint="@drawable/hint_selector" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="#FFFFFF"
            android:hint="@string/password_hint"
            android:paddingBottom="14dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_email_layout"
            app:layout_constraintVertical_bias="0.05">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:maxLines="1"
                android:text="@{loginViewModel.user.password}"
                android:textColor="#000000"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:textColorHint="@drawable/hint_selector" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/montserrat_light"
            android:text="Login"
            android:textAllCaps="false"
            android:textColor="#FBFBFB"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/login_password_layout"
            app:layout_constraintStart_toStartOf="@id/login_password_layout"
            app:layout_constraintTop_toBottomOf="@+id/login_password_layout"
            app:layout_constraintVertical_bias="0.15" />

        <TextView
            android:id="@+id/login_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/forgot_your_password"
            android:textColor="@color/orange"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <TextView
            android:id="@+id/login_no_acc_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/no_account"
            android:textColor="#000000"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.34"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_forgot"
            app:layout_constraintVertical_bias="0.312" />

        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/register"
            android:textColor="@color/orange"
            android:textSize="18dp"
            android:onClick="@{() -> loginViewModel.clickOnRegister()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.34"
            app:layout_constraintStart_toEndOf="@id/login_no_acc_register"
            app:layout_constraintTop_toBottomOf="@+id/login_forgot"
            app:layout_constraintVertical_bias="0.312" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>